--- a/index.html
+++ b/index.html
@@ -9,50 +9,50 @@
 <body>
     <section id="section">
         <div class="container">
-            <div class="item" id="a">
-                <p class="num">0</p>
-                <div class="opacity" id="a__opacity"></div>
+            <div class="item" id="azulCeleste">
+                <!-- <p class="num">0</p> -->
+                <div class="opacity" id="a__opacity" data-number="0"></div>
             </div>
-            <div class="item" id="b">
-                <p class="num">1</p>
-                <div class="opacity" id="b__opacity"></div>
+            <div class="item" id="naranjaZanaoria">
+                <!-- <p class="num">1</p> -->
+                <div class="opacity" id="b__opacity" data-number="1"></div>
             </div>
-            <div class="item" id="c">
-                <p class="num">2</p>
-                <div class="opacity" id="c__opacity"></div>
+            <div class="item" id="azulBaya">
+                <!-- <p class="num">2</p> -->
+                <div class="opacity" id="c__opacity" data-number="2"></div>
             </div>
-            <div class="item" id="d">
-                <p class="num">3</p>
-                <div class="opacity" id="d__opacity"></div>
+            <div class="item" id="amarillo">
+                <!-- <p class="num">3</p> -->
+                <div class="opacity" id="d__opacity" data-number="3"></div>
             </div>
-            <div class="item" id="e">
-                <p class="num">4</p>
-                <div class="opacity" id="e__opacity"></div>
+            <div class="item" id="rojo">
+                <!-- <p class="num">4</p> -->
+                <div class="opacity" id="e__opacity" data-number="4"></div>
             </div>
-            <div class="item" id="f">
-                <p class="num">5</p>
-                <div class="opacity" id="f__opacity"></div>
+            <div class="item" id="magenta">
+                <!-- <p class="num">5</p> -->
+                <div class="opacity" id="f__opacity" data-number="5"></div>
             </div>
-            <div class="item" id="g">
-                <p class="num">6</p>
-                <div class="opacity" id="g__opacity"></div>
+            <div class="item" id="verdeLima">
+                <!-- <p class="num">6</p> -->
+                <div class="opacity" id="g__opacity" data-number="6"></div>
             </div>
-            <div class="item" id="h">
-                <p class="num">7</p>
-                <div class="opacity" id="h__opacity"></div>
+            <div class="item" id="naranjaSalamandra">
+                <!-- <p class="num">7</p> -->
+                <div class="opacity" id="h__opacity" data-number="7"></div>
             </div>
-            <div class="item" id="i">
-                <p class="num">8</p>
-                <div class="opacity" id="i__opacity"></div>
+            <div class="item" id="azulCeruleo">
+                <!-- <p class="num">8</p> -->
+                <div class="opacity" id="i__opacity" data-number="8"></div>
             </div>
             <div class="menu" id="menu">
                 <h3 class="difficulty">Select difficulty</h3>
                 <select class="select" name="dificultad" id="dificultad">
-                    <option value="10000">Easy</option>
-                    <option value="5000">Medium</option>
-                    <option value="1000">Hard</option>
+                    <option value="1000">Easy</option>
+                    <option value="800">Medium</option>
+                    <option value="400">Hard</option>
                 </select>
-                <button id="btn-start" class="button" onclick="start(value)">Start</button>
+                <button id="btn-start" class="button" onclick="start()">Start</button>
             </div>
             <div id="restar" class="ganaste">
                 <h1 class="won">You won</h1>
